# OpenSfM

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILD_SYSTEM_MIGRATION_PLAN.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.ceres2  Dockerfile.python2  Dockerfile.ubuntu1910  Dockerfile.ubuntu20  Dockerfile.ubuntu22  Dockerfile.ubuntu24  README.md  asset-manifest.json  build_wheel.sh  camera-controls.js  conda.yml  cones_config_example.yaml  config.yaml  create_tracks.py  data  dataset.py  detect_features.py  docker-compose.yaml  docker_build.sh  docker_start.sh  export_pmvs.md  features.py  filter_dates.py  find_homographies.py  focal_from_exif.py  gather_submodels.py  generate_gcp.py  index.html  licenses.csv  manifest.json  mapillary_structure.json  (+25 more)
annotation_gui_gcp/: Database.py  GUI.py  apps.py  cad_view.py  main.py  (+16 more)
lib/src/: CMakeLists.txt  akaze.cc  akaze.cpp  bundle.cc  bundle.h  bundle_test.cc  csfm.cc  hahog.cc  hahog.h  multiview.cc  robust_matching.cc  tvr.cc  two_view_reconstruction.cc  types.h
lib/src/cmake/: FindJsonCpp.cmake  FindNumPy.cmake  FindSuiteSparse.cmake
lib/src/libmv/multiview/: essential_kernel_test.cc  five_point.cc  five_point.h  five_point_internal.h  five_point_kernel.h  five_point_test.cc  fundamental_kernel.cc  random_sample.h  robust_estimation.cc  robust_estimation.h  robust_estimation_test.cc  robust_five_point.cc  robust_five_point_test.cc
opensfm/src/: CMakeLists.txt  akaze.cc  akaze_bind.cc  bfm_gpu.h  bundle.h  bundle_test.cc  bundle_two_views.h  csfm.cc  debug_c_extension.cc  depthmap.cc  depthmap.h  depthmap_bind.h  depthmap_test.cc  depthmap_wrapper.cc  dsift.cc  dsift.h  essential.h  hahog.cc  hahog.h  matching.cc  multiview.cc  numeric.h  openmvs_exporter.h  orb_gpu.h  pose.h  reconstruction_alignment.h  relative_pose_5pt.h  robust.h  testing_main.cc  triangulation.h  types.h
opensfm/src/bundle/: CMakeLists.txt  bundle_adjuster.h  pybundle.pyi  reconstruction_alignment.h
opensfm/src/bundle/data/: bias.h  camera.h  data.h  point.h  pose.h  rig.h  shot.h
opensfm/src/bundle/error/: absolute_motion_errors.h  autodiff_ceres_compat.h  error_utils.h  motion_prior_errors.h  parameters_errors.h  position_functors.h  prior_error.h  projection_errors.h  relative_depth_error.h  relative_motion_errors.h
opensfm/src/bundle/python/: pybind.cc
opensfm/src/bundle/src/: absolute_motion_terms.h  bundle_adjuster.cc  error_utils.h  motion_prior_terms.h  position_functors.h  projection_errors.h  relative_motion_terms.h
opensfm/src/bundle/test/: bundle_data_test.cc  reprojection_errors_test.cc
opensfm/src/cmake/: FindCeres.cmake  FindGlog.cmake  FindSuiteSparse.cmake
opensfm/src/dense/: CMakeLists.txt  depthmap.h  depthmap_bind.h  openmvs_exporter.h  pydense.pyi
opensfm/src/dense/python/: pybind.cc
opensfm/src/dense/src/: depthmap.cc
opensfm/src/dense/test/: depthmap_test.cc
opensfm/src/features/: CMakeLists.txt  akaze_bind.h  hahog.h  matching.h  pyfeatures.pyi
opensfm/src/features/python/: pybind.cc
opensfm/src/features/src/: akaze_bind.cc  hahog.cc  matching.cc
opensfm/src/foundation/: CMakeLists.txt  logger.h  newton_raphson.h  numeric.h  optional.h  python_types.h  stl_extensions.h  types.h  union_find.h
opensfm/src/foundation/src/: logger.cc  newton_raphson.cc  numeric.cc  types.cc
opensfm/src/foundation/test/: newton_raphson_test.cc  union_find_test.cc
opensfm/src/geo/: CMakeLists.txt  geo.h  pygeo.pyi
opensfm/src/geo/python/: pybind.cc
opensfm/src/geo/src/: geo.cc
opensfm/src/geo/test/: geo_test.cc
opensfm/src/geometry/: CMakeLists.txt  absolute_pose.h  camera.h  camera_distorsions_functions.h  camera_distortions_functions.h  camera_functions.h  camera_instances.h  camera_projections_functions.h  camera_transformations_functions.h  covariance.h  essential.h  functions.h  pose.h  pygeometry.pyi  relative_pose.h  similarity.h  transform.h  transformations_functions.h  triangulation.cc  triangulation.h
opensfm/src/geometry/python/: pybind.cc
opensfm/src/geometry/src/: absolute_pose.cc  camera.cc  camera_functions.cc  covariance.cc  essential.cc  pose.cc  relative_pose.cc  triangulation.cc
opensfm/src/geometry/test/: camera_functions_test.cc  camera_test.cc  covariance_test.cc  point_test.cc  triangulation_test.cc
opensfm/src/map/: CMakeLists.txt  TestView.h  ba_helpers.h  dataviews.h  defines.h  geo.h  ground_control_points.h  landmark.h  map.h  observation.h  pose.h  pybind_utils.h  pymap.pyi  retriangulation.h  rig.h  shot.h  tracks_manager.h
opensfm/src/map/python/: pybind.cc
opensfm/src/map/src/: ba_helpers.cc  dataviews.cc  landmark.cc  map.cc  observation.cc  retriangulation.cc  rig.cc  shot.cc  tracks_manager.cc
opensfm/src/map/test/: map_test.cc  rig_test.cc  tracks_manager_test.cc
opensfm/src/robust/: CMakeLists.txt  absolue_pose_model.h  absolute_pose_known_rotation_model.h  absolute_pose_model.h  essential_model.h  instanciations.cpp  instanciations.h  line_model.h  model.h  pyrobust.pyi  random_sampler.h  relative_pose_model.h  relative_rotation_model.h  robust_estimator.h  scorer.h  similarity_model.h
opensfm/src/robust/python/: pybind.cc
opensfm/src/robust/src/: absolute_pose_known_rotation_model.cc  absolute_pose_model.cc  instanciations.cc  line_model.cc  relative_pose_model.cc  relative_rotation_model.cc  scorer.cc  similarity_model.cc
opensfm/src/sfm/: CMakeLists.txt  ba_helpers.h  keypoint.h  map_helpers.h  observation.h  pysfm.pyi  retriangulation.h  sfm_helpers.h  tracks_helpers.h  tracks_manager.h  types.h
opensfm/src/sfm/python/: pybind.cc
opensfm/src/sfm/src/: ba_helpers.cc  map_helpers.cc  observation.cc  retriangulation.cc  sfm_helpers.cc  tracks_helpers.cc  tracks_manager.cc
opensfm/src/sfm/test/: sfm_helpers_test.cc  tracks_helpers_test.cc  tracks_manager_test.cc
opensfm/src/slam/: CMakeLists.txt  guided_matching.h  guided_matching_bind.h  orb_extractor_bind.h  pyslam_utilities.h  slam_map.h  slam_utilities.h
opensfm/src/slam/python/: pybind.cc
opensfm/src/slam/src/: guided_matching.cc  slam_map.cc  slam_utilities.cc
(+457 files in other folders)
